$Id$

Release 1.7 (build number XX):

* Fixed an exception when parsing a file with a <taskdef> outside of a target.


Release 1.6 (build number 80):

* Rewrite of the dot generator,
* Subant generic links now have a specific display style.


Release 1.5:

* Support for the subant task,
* AntProject(File) now throws a Grand Exception when the build file
  cannot be opened,
* Relative paths in the dir attribute of the ant task are now handled
  correctly,
* The Ant task no longer crashes when no target is supplied,
* Use new ant 1.6.2 API to get target execution conditions,
* Minor bugfixes.

Release 1.4:

* Small fixes needed by release 0.2 of the GUI.


Release 1.3:

* Major rework in the way the ant file tasks are processed,
* The nested ant, antcall & similar tasks are now correctly displayed,
* Support for the runtarget task.


Release 1.2:

* Internal changes allowing to gather more information on targets,
* First release of a GUI based on Grand.


Release 1.1:

* Compile with Ant 1.6.1 rather than 1.6,

* Add the FilterChain class to handle a set of filters as one
  filter,

* Implements a preliminary support for ant task,

* Some code cleanup.


Release 1.0:

* Code cleanup: removed Jikes warning on tests.

* Run unit test with Ant 1.6.1 and Java 1.5.0 beta.


Release 0.9:

* Code cleanup to be more checkstyle compliant, the net.ggtools.grand.App
  class have been removed.


Release 0.4:

* Grand now creates the nodes missing to satisfy a dependency, use the
  new missingnode filter to get back to the old behaviour.

* Grand has a mechanism to set and use properties when processing a
  projects.


Release 0.3.1:

* Bug: antcall crashed when the target do not exists (property defined for
  instance).

* Bug: antcall search crashes if getTaskType returned null.

* Bug: some unit tests do not pass on Windows.

* Bug: build.xml was completly outdated.

* The graph's name can now be displayed.


Release 0.3:

* Add filters in grand task.
