@@ -18,5 +18,8 @@ missingnode=net.ggtools.grand.tasks.MissingNodeFilterType
 # Filter to keep nodes connected to a node
 connected=net.ggtools.grand.tasks.ConnectedFilterType
 
+# Filter removing nodes by name
+removenode=net.ggtools.grand.tasks.NodeRemoverFilterType
+
 # Dummy not to be found filter for test purpose.
 gabuzotestfilter=net.ggtools.grand.tasks.IDoNotExist
